# assref

./: .clang-format  .editorconfig  .fileheader  LICENSE  meson.build  meson_options.txt
.github/workflows/: build.yml
include/: csv.h  db.h  decode.h  luaapi.h  mappool.h  match.h  migrations.h  playerlist.h  pool.h  table.h  textio.h
lua/: assref.lua  meson.build
src/: csv.c  db.c  decode.c  fieldtypes.c  io.c  mappool.c  match.c  meson.build  playerlist.c  table.c
src/hexchat/: commands.c  commands.h  help.c  load.c  main.c  mappool.c  meson.build  os.h  playerlist.c  plugindata.h  win32.c
src/lua/: mappool.c  meson.build
src/migrations/: 20221213_initial_migration.c  20221215_add_players.c  20230320_index_player_id.c  index.c  meson.build
tests/: csv.cpp  db.cpp  dbtest.cpp  dbtest.h  decode.cpp  io.cpp  lua.cpp  mappool.cpp  match.cpp  meson.build  playerlist.cpp  table.cpp
tests/data/: .editorconfig  .gitattributes  crlf.csv  escape.csv  getc.txt  line.csv  meson.build  multiline.csv  notrailing.csv  players.csv  pool.csv  poolentry.csv  toolong.csv
